Accordion: fix horizontal overflowing content

--- a/coral-component-accordion/src/styles/index.styl
+++ b/coral-component-accordion/src/styles/index.styl
@@ -31,7 +31,7 @@
 // @spectrum support animation
 ._coral-Accordion--animated {
   ._coral-Accordion-itemContent {
-    overflow: hidden;
+    overflow-y: hidden;
     transition: height ease 250ms;
   }
 }
